--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:k2TqfHzMOHlw3XZBmVfcjc1JUF7M1Zt74dSsGTYGML0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
